# rift

./: CMakeLists.txt  OVRShaders.h  README.md  omegaProcessing.cpp  rift.cfg  rift.cpp
